force-app/main/default/objects/LicenseRequirements__c/LicenseRequirements__c.object-meta.xml
<CustomObject>
    <description>PacPoint-IC071619- Created for PVL phase 1</description>
    <label>License Requirements</label>
    <nameField>
        <label>License Requirements Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LicenseRequirements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>