force-app/main/default/objects/LicenseRequirements__c/fields/IsDeficient__c.field-meta.xml
<CustomField>
    <fullName>IsDeficient__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-MV080519 - Created for PVL phase 1</description>
    <label>Is Deficient?</label>
    <type>Checkbox</type>
</CustomField>