force-app/main/default/objects/LicenseRequirements__c/fields/License__c.field-meta.xml
<CustomField>
    <fullName>License__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PacPoint-IC073019- Created for PVL phase 1</description>
    <label>License</label>
    <referenceTo>License__c</referenceTo>
    <relationshipLabel>License Requirements</relationshipLabel>
    <relationshipName>LicenseRequirements</relationshipName>
    <type>Lookup</type>
</CustomField>