force-app/main/default/objects/LicenseRequirements__c/fields/ParentLicenseRequirement__c.field-meta.xml
<CustomField>
    <fullName>ParentLicenseRequirement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PacPoint-MV080519- Created for PVL phase 1</description>
    <label>Parent License Requirement</label>
    <referenceTo>LicenseRequirements__c</referenceTo>
    <relationshipLabel>License Requirements</relationshipLabel>
    <relationshipName>LicenseRequirements</relationshipName>
    <type>Lookup</type>
</CustomField>