force-app/main/default/objects/LicenseRequirements__c/fields/Remarks__c.field-meta.xml
<CustomField>
    <fullName>Remarks__c</fullName>
    <description>PacPoint-MV101519 - Created for PVL phase 1</description>
    <label>Remarks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>