force-app/main/default/objects/LicenseRequirements__c/fields/Requirement__c.field-meta.xml
<CustomField>
    <fullName>Requirement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PacPoint-MV082819 - Created for PVL phase 1</description>
    <label>Requirement</label>
    <referenceTo>Requirements__c</referenceTo>
    <relationshipLabel>LicenseRequirements</relationshipLabel>
    <relationshipName>LicenseRequirements</relationshipName>
    <type>Lookup</type>
</CustomField>