force-app/main/default/objects/LicenseRequirements__c/fields/RequirementName__c.field-meta.xml
<CustomField>
    <fullName>RequirementName__c</fullName>
    <description>PacPoint-MV080519 - Created for PVL phase 1.Created to be used in the &quot;RelatedList&quot; multiline component on the License Lightning Page
PacPoint-AZ290819 - remove LicenseTypeRequirement__r.Deficiency__c</description>
    <formula>&apos;&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requirement Name</label>
    <type>Text</type>
</CustomField>